Add JWT auth (register/login) and supporting services
Implement authentication flow using JWT: add AuthController with register and login endpoints and a BaseController helper for mapping Result errors. Introduce DTOs (RegisterRequest, LoginRequest, AuthResponse), IAuthService interface, and AuthService (BCrypt password hashing, token generation using JWT settings). Add Result<T> response wrapper and ErrorType enum for standardized error handling. Wire up DI and authentication in Program.cs (register AuthService, configure JwtBearer authentication and authorization, add Swagger/OpenAPI with Bearer security). Update appsettings.json with Jwt configuration and add package references for BCrypt and Swashbuckle in the project file.

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,12 @@
   
   "ConnectionStrings": {
     "DefaultConnection": "Your connection string"
+  },
+
+  "Jwt": {
+    "Secret": "your secret here",
+    "Issuer": "your issuer",
+    "Audience": "your audience",
+    "ExpiryMinutes": 60
   }
 }
